# gnome-shell-extension-app-switcher-actions

./: .gitignore  Makefile.am  README.md  configure.ac
po/: Makevars  POTFILES.in  gnome-shell-extension-app-switcher-actions.pot  pt_BR.po
schemas/: Makefile.am  gnome-shell-extension-app-switcher-actions.gschema.xml.in  org.gnome.shell.extensions.app-switcher-actions.gschema.xml
src/: Makefile.am  extension.js  metadata.json  prefs.js  settings.js
